--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -9,7 +9,7 @@
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<integer value="162"/>
-			<integer value="177"/>
+			<integer value="187"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -50,46 +50,19 @@
 			<object class="IBUITabBarController" id="1034742383">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-				<object class="IBUINavigationController" key="IBUISelectedViewController" id="99556487">
-					<string key="IBUITitle">Alarms</string>
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="564141124">
-						<string key="IBUITitle">Alarms</string>
+				<object class="IBUIViewController" key="IBUISelectedViewController" id="43012729">
+					<string key="IBUITitle">Nodes</string>
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="555248459">
+						<string key="IBUITitle">Nodes</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">clock.png</string>
+							<string key="NSResourceName">display.png</string>
 						</object>
 						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
+					<string key="IBUINibName">NodeListView</string>
 					<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-					<object class="IBUINavigationBar" key="IBUINavigationBar" id="1067747633">
-						<nil key="NSNextResponder"/>
-						<int key="NSvFlags">256</int>
-						<string key="NSFrameSize">{0, 0}</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<bool key="IBUIMultipleTouchEnabled">YES</bool>
-						<object class="NSColor" key="IBUITintColor">
-							<int key="NSColorSpace">2</int>
-							<bytes key="NSRGB">MC4yMTE3NjQ3MiAwLjQxMTc2NDc0IDAuMDExNzY0NzA3AA</bytes>
-						</object>
-					</object>
-					<object class="NSMutableArray" key="IBUIViewControllers">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="IBUIViewController" id="504998257">
-							<string key="IBUITitle">Alarms</string>
-							<object class="IBUINavigationItem" key="IBUINavigationItem" id="431395837">
-								<reference key="IBUINavigationBar"/>
-								<string key="IBUITitle">Alarms</string>
-								<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="919942267">
-									<int key="IBUIStyle">1</int>
-									<int key="IBUISystemItemIdentifier">13</int>
-								</object>
-							</object>
-							<reference key="IBUIParentViewController" ref="99556487"/>
-							<string key="IBUINibName">AlarmView</string>
-						</object>
-					</object>
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -140,21 +113,47 @@
 							</object>
 						</object>
 					</object>
-					<reference ref="99556487"/>
-					<object class="IBUIViewController" id="148944765">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="246884639">
-							<string key="IBUITitle">Nodes</string>
+					<object class="IBUINavigationController" id="142148600">
+						<string key="IBUITitle">Alarms</string>
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="626916397">
+							<string key="IBUITitle">Alarms</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
-								<string key="NSResourceName">display.png</string>
+								<string key="NSResourceName">clock.png</string>
 							</object>
 							<reference key="IBUITabBar"/>
 						</object>
-						<object class="NSArray" key="IBUIToolbarItems">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
+						<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
+						<object class="IBUINavigationBar" key="IBUINavigationBar" id="511249503">
+							<nil key="NSNextResponder"/>
+							<int key="NSvFlags">256</int>
+							<string key="NSFrameSize">{0, 0}</string>
+							<bool key="IBUIOpaque">NO</bool>
+							<bool key="IBUIClipsSubviews">YES</bool>
+							<bool key="IBUIMultipleTouchEnabled">YES</bool>
+							<object class="NSColor" key="IBUITintColor">
+								<int key="NSColorSpace">2</int>
+								<bytes key="NSRGB">MC4yMTE3NjQ3MiAwLjQxMTc2NDc0IDAuMDExNzY0NzA3AA</bytes>
+							</object>
+						</object>
+						<object class="NSMutableArray" key="IBUIViewControllers">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUIViewController" id="868838556">
+								<string key="IBUITitle">Alarms</string>
+								<object class="IBUINavigationItem" key="IBUINavigationItem" id="607925708">
+									<string key="IBUITitle">Alarms</string>
+									<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="162773516">
+										<int key="IBUIStyle">1</int>
+										<int key="IBUISystemItemIdentifier">13</int>
+									</object>
+								</object>
+								<reference key="IBUIParentViewController" ref="142148600"/>
+								<string key="IBUINibName">AlarmView</string>
+							</object>
+						</object>
 					</object>
+					<reference ref="43012729"/>
 					<object class="IBUIViewController" id="493901519">
 						<object class="IBUIView" key="IBUIView" id="969988115">
 							<nil key="NSNextResponder"/>
@@ -363,8 +362,8 @@ cC90b3VjaGNvZGUvLg</string>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">reload:</string>
-						<reference key="source" ref="919942267"/>
-						<reference key="destination" ref="504998257"/>
+						<reference key="source" ref="162773516"/>
+						<reference key="destination" ref="868838556"/>
 					</object>
 					<int key="connectionID">181</int>
 				</object>
@@ -405,10 +404,10 @@ cC90b3VjaGNvZGUvLg</string>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="795333663"/>
-							<reference ref="148944765"/>
 							<reference ref="493901519"/>
 							<reference ref="1819890"/>
-							<reference ref="99556487"/>
+							<reference ref="142148600"/>
+							<reference ref="43012729"/>
 						</object>
 						<reference key="parent" ref="992801752"/>
 					</object>
@@ -421,20 +420,6 @@ cC90b3VjaGNvZGUvLg</string>
 						<int key="objectID">-2</int>
 						<reference key="object" ref="532797962"/>
 						<reference key="parent" ref="992801752"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">131</int>
-						<reference key="object" ref="148944765"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="246884639"/>
-						</object>
-						<reference key="parent" ref="1034742383"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">130</int>
-						<reference key="object" ref="246884639"/>
-						<reference key="parent" ref="148944765"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">133</int>
@@ -549,47 +534,61 @@ cC90b3VjaGNvZGUvLg</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">174</int>
-						<reference key="object" ref="99556487"/>
+						<reference key="object" ref="142148600"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="504998257"/>
-							<reference ref="1067747633"/>
-							<reference ref="564141124"/>
+							<reference ref="868838556"/>
+							<reference ref="511249503"/>
+							<reference ref="626916397"/>
 						</object>
 						<reference key="parent" ref="1034742383"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">175</int>
-						<reference key="object" ref="504998257"/>
+						<reference key="object" ref="868838556"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="431395837"/>
+							<reference ref="607925708"/>
 						</object>
-						<reference key="parent" ref="99556487"/>
+						<reference key="parent" ref="142148600"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">176</int>
-						<reference key="object" ref="1067747633"/>
-						<reference key="parent" ref="99556487"/>
+						<reference key="object" ref="511249503"/>
+						<reference key="parent" ref="142148600"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">177</int>
-						<reference key="object" ref="431395837"/>
+						<reference key="object" ref="607925708"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="919942267"/>
+							<reference ref="162773516"/>
 						</object>
-						<reference key="parent" ref="504998257"/>
+						<reference key="parent" ref="868838556"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">178</int>
-						<reference key="object" ref="564141124"/>
-						<reference key="parent" ref="99556487"/>
+						<reference key="object" ref="626916397"/>
+						<reference key="parent" ref="142148600"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">180</int>
-						<reference key="object" ref="919942267"/>
-						<reference key="parent" ref="431395837"/>
+						<reference key="object" ref="162773516"/>
+						<reference key="parent" ref="607925708"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">187</int>
+						<reference key="object" ref="43012729"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="555248459"/>
+						</object>
+						<reference key="parent" ref="1034742383"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">188</int>
+						<reference key="object" ref="555248459"/>
+						<reference key="parent" ref="43012729"/>
 					</object>
 				</object>
 			</object>
@@ -602,7 +601,6 @@ cC90b3VjaGNvZGUvLg</string>
 					<string>106.IBEditorWindowLastContentRect</string>
 					<string>106.IBPluginDependency</string>
 					<string>107.IBPluginDependency</string>
-					<string>130.IBPluginDependency</string>
 					<string>132.IBPluginDependency</string>
 					<string>133.CustomClassName</string>
 					<string>134.IBPluginDependency</string>
@@ -627,6 +625,8 @@ cC90b3VjaGNvZGUvLg</string>
 					<string>176.IBPluginDependency</string>
 					<string>177.IBPluginDependency</string>
 					<string>180.IBPluginDependency</string>
+					<string>187.CustomClassName</string>
+					<string>187.IBPluginDependency</string>
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
@@ -638,7 +638,6 @@ cC90b3VjaGNvZGUvLg</string>
 					<string>UIApplication</string>
 					<string>UIResponder</string>
 					<string>{{1225, 510}, {320, 480}}</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -664,6 +663,8 @@ cC90b3VjaGNvZGUvLg</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>NodeListController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableDictionary">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -700,7 +701,7 @@ cC90b3VjaGNvZGUvLg</string>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">181</int>
+			<int key="maxID">188</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -743,6 +744,14 @@ cC90b3VjaGNvZGUvLg</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/Controllers/NodeDetailController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NodeListController</string>
+					<string key="superclassName">UITableViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/Controllers/NodeListController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
