--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="187"/>
+			<integer value="190"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -49,9 +49,9 @@
 			<object class="IBUITabBarController" id="1034742383">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-				<object class="IBUIViewController" key="IBUISelectedViewController" id="43012729">
+				<object class="IBUINavigationController" key="IBUISelectedViewController" id="567342637">
 					<string key="IBUITitle">Nodes</string>
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="555248459">
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="975369678">
 						<string key="IBUITitle">Nodes</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
@@ -60,8 +60,30 @@
 						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
-					<string key="IBUINibName">NodeListView</string>
 					<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
+					<object class="IBUINavigationBar" key="IBUINavigationBar" id="1013754673">
+						<nil key="NSNextResponder"/>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrameSize">{0, 0}</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<object class="NSColor" key="IBUITintColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC4yMTE3NjQ3MiAwLjQxMTc2NDc0IDAuMDExNzY0NzA3AA</bytes>
+						</object>
+					</object>
+					<object class="NSArray" key="IBUIViewControllers">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="IBUIViewController" id="406352995">
+							<object class="IBUINavigationItem" key="IBUINavigationItem" id="457720909">
+								<reference key="IBUINavigationBar"/>
+								<string key="IBUITitle">Nodes</string>
+							</object>
+							<reference key="IBUIParentViewController" ref="567342637"/>
+							<string key="IBUINibName">NodeListView</string>
+						</object>
+					</object>
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -152,7 +174,7 @@
 							</object>
 						</object>
 					</object>
-					<reference ref="43012729"/>
+					<reference ref="567342637"/>
 					<object class="IBUIViewController" id="493901519">
 						<object class="IBUIView" key="IBUIView" id="969988115">
 							<nil key="NSNextResponder"/>
@@ -336,7 +358,7 @@ cC90b3VjaGNvZGUvLg</string>
 							<reference ref="493901519"/>
 							<reference ref="1819890"/>
 							<reference ref="142148600"/>
-							<reference ref="43012729"/>
+							<reference ref="567342637"/>
 						</object>
 						<reference key="parent" ref="992801752"/>
 					</object>
@@ -483,18 +505,39 @@ cC90b3VjaGNvZGUvLg</string>
 						<reference key="parent" ref="607925708"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">187</int>
-						<reference key="object" ref="43012729"/>
+						<int key="objectID">190</int>
+						<reference key="object" ref="567342637"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="555248459"/>
+							<reference ref="1013754673"/>
+							<reference ref="975369678"/>
+							<reference ref="406352995"/>
 						</object>
 						<reference key="parent" ref="1034742383"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">188</int>
-						<reference key="object" ref="555248459"/>
-						<reference key="parent" ref="43012729"/>
+						<int key="objectID">192</int>
+						<reference key="object" ref="1013754673"/>
+						<reference key="parent" ref="567342637"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">194</int>
+						<reference key="object" ref="975369678"/>
+						<reference key="parent" ref="567342637"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">191</int>
+						<reference key="object" ref="406352995"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="457720909"/>
+						</object>
+						<reference key="parent" ref="567342637"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">193</int>
+						<reference key="object" ref="457720909"/>
+						<reference key="parent" ref="406352995"/>
 					</object>
 				</object>
 			</object>
@@ -526,8 +569,11 @@ cC90b3VjaGNvZGUvLg</string>
 					<string>176.IBPluginDependency</string>
 					<string>177.IBPluginDependency</string>
 					<string>180.IBPluginDependency</string>
-					<string>187.CustomClassName</string>
-					<string>187.IBPluginDependency</string>
+					<string>190.IBPluginDependency</string>
+					<string>191.CustomClassName</string>
+					<string>191.IBPluginDependency</string>
+					<string>192.IBPluginDependency</string>
+					<string>193.IBPluginDependency</string>
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
@@ -560,7 +606,10 @@ cC90b3VjaGNvZGUvLg</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>NodeListController</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableDictionary">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -597,7 +646,7 @@ cC90b3VjaGNvZGUvLg</string>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">189</int>
+			<int key="maxID">195</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -631,24 +680,8 @@ cC90b3VjaGNvZGUvLg</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">NodeDetailController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">nodeTable</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/Controllers/NodeDetailController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">NodeListController</string>
 					<string key="superclassName">UITableViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">nodeDetailController</string>
-						<string key="NS.object.0">NodeDetailController</string>
-					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/Controllers/NodeListController.h</string>
@@ -683,17 +716,8 @@ cC90b3VjaGNvZGUvLg</string>
 						<string key="NS.object.0">id</string>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSMutableArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>nodeDetailController</string>
-							<string>outageTable</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>NodeDetailController</string>
-							<string>UITableView</string>
-						</object>
+						<string key="NS.key.0">outageTable</string>
+						<string key="NS.object.0">UITableView</string>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
